welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:7: error: not found: value bnpas
	bnpas=nbpas+1;
        ^