welcome.lessons.welcome.methods.basics.Methods.scala.code
var nbpas=0;
var dejafait=0;
def goAndGet() {while(!estSurBiscuit()){
	avance();
	bnpas=nbpas+1;
while(estSurBiscuit()){
prendBiscuit();
for(dejafait<- 0 to nbpas ){
	recule();
}
}
}}